2022-12-03  Bart Schaefer  <schaefer@zsh.org>

	* Philippe Altherr: 51071: Src/exec.c, Test/C03traps.ztst: fix
	ERR_RETURN when a function using && / || is called within another
	statement using && / ||

	* Philippe Altherr: 51001: Src/exec.c, Src/loop.c,
	Test/C03traps.ztst: adjust handling of ERR_EXIT to more closely
	align with POSIX and with other shells; add corresponding tests

2022-12-02  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 51080: Src/glob.c: allow multibyte characters in glob qualifier
	(u:uname:)

	* 51079: Src/params.c, Test/D06subscript.ztst: metafy sep in the
	array subscript flag (s:sep:) so that sep can contain \0 etc.

2022-11-23  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted (cf. 51016): Test/C01arith.ztst: Add a test case
	for underscore-followed-by-digits in math context.

2022-11-17  Oliver Kiddle  <opk@zsh.org>

	* unposted (c.f. Norikatsu Shigemura: github #96):
	Completion/Unix/Command/_cut: add missing local declaration

	* github #87: Matt Koscica: Completion/Unix/Command/_tmux:
	update options tmux 3.4

	* github #95: Wu Zhenyu: Completion/Unix/Command/_mutt:
	Add completions for neomutt

	* unposted (c.f. Denis Bitouzé: users/28405):
	Completion/Unix/Command/_tex: handle also lualatex

	* 50934: Doc/Zsh/zle.yo, Src/Zle/zle.h, Src/Zle/zle_utils.c,
	Src/Zle/zle_vi.c: use OSC 52 escape sequence when copying to
	"* or "+ vi buffers

2022-11-09  Bart Schaefer  <schaefer@zsh.org>

	* 50928: Test/C03traps.ztst: scoping of ERR_RETURN in test
	(most of this patch was not retained)

	* 50922: Src/exec.c, Src/jobs.c: fix additional cases of signals
	for current shell jobs on the right of a pipeline.  Backs out
	part of 50874.

2022-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* users/28338: Src/lex.c, Test/D08cmdsubst.ztst: edge case of an
	edge case in command expansion of alias.

2022-11-06  Bart Schaefer  <schaefer@zsh.org>

	* 50874: Src/jobs.c: fix handling of tty signals for jobs in